	* CCID improved feature query
	* initial work on CDI based eID Applet Service
	* Manifest Application-Name set to eID Applet
	* Usage translation
	* fix for BouncyCastle 1.50
	* signature authorization support
	* fix for Windows 8.x SCARD_RESET error
	* fix for BUD001 smart card reader
	* Java 7 compilation
	* DateAndCountryOfProtection field support
	* Pseudo-APDU support

1.1.3 - 14 Dec 2013
	* updated Oracle deployJava javascript
	* Removed all FedICT branding

1.1.2 - 7 Dec 2013
	* XML signature XPath co-signature fix
	* Permissions and Codebase attributes in manifest

1.1.0.GA - 4 Nov 2013
	* CDI support
	* fix NULL DER parameter on AlgorithmIdentifiers
	* Java 7 compilation fixes
	* OOXML signature fixes
	* Mac OS X fixes for both PC/SC and dialogs
	* improved card reader handling
	* work-around for disabled third party cookies
	* documented Maven integration
	* documented HttpOnly on Tomcat 7
	* also check card validity interval on identification
	* fix for BouncyCastle 1.49

1.0.5.GA - 2 Oct 2012
	* improved exception and error handling
	* removed PKCS#11 usage (only direct PC/SC from now on)
	* deployJava script improvements
	* support for new eID secure pinpad reader (transaction msg signing)
	* support for blue card
	* support for extra field of foreigner eID cards
	* 2048 bit RSA support
	* RSA-PSS support
	* HSTS support
	* various build system improvements
	* i18n fixes and improvements
	* OOXML signature fix (external targets)

1.0.4.GA - 9 Dec 2011
	* XAdES digest algo configuration
	* XAdES c14n, namespace, XML schema fixes
	* ASiC support
	* Maven site configuration
	* Maven fixes (cleanup & repository changes)
	* CDI support
	* Office2010 signature improvements
	* German date of birth fixes
	* common deployment javascript for the eID Applet

1.0.3.GA - 20 Jun 2011
	* fixed Hibernate LOB and Oracle issue
	* 64-bit workaround for Ubuntu
	* fixed UTF-8 issue in AJP/HTTP connectors
	* fixed year only in DoB