@@ -39,6 +39,8 @@ protocolSignature=The application wants to create an additional authentication s
 readingIdentity=Lesen ihrer Personalien...
 removeCard=Entfernen sie bitte ihre eID-Karte.
 retriesLeft=Anzahl der verbleibenden Versuche
+safariSandbox1=Detected that Safari runs Java within a sandbox.\n\nYou can fix this as follows:\nSafari -> Preferences -> Security -> Internet plug-ins: Website Settings\n-> Java -> 
+safariSandBox2= -> Allow -> Run in Unsafe Mode\nThese settings will be active the next time.
 securityError=Sicherungsfehler.
 selectFiles=W\u00e4hlen sie die Dateien...
 signatureAlgo=Algorithmus der Unterschrift
