@@ -39,6 +39,8 @@ protocolSignature=The application wants to create an additional authentication s
 readingIdentity=Reading out identity...
 removeCard=Please remove your eID card.
 retriesLeft=Retries left
+safariSandbox1=Detected that Safari runs Java within a sandbox.\n\nYou can fix this as follows:\nSafari -> Preferences -> Security -> Internet plug-ins: Website Settings\n-> Java -> 
+safariSandBox2= -> Allow -> Run in Unsafe Mode\nThese settings will be active the next time.
 securityError=Security Error.
 selectFiles=Select files...
 signatureAlgo=Signature algorithm
