@@ -39,6 +39,8 @@ protocolSignature=L'application essaye de cr\u00e9er une signature d'authentific
 readingIdentity=Lecture des donn\u00e9es d'identification.
 removeCard=Veuillez retirer votre carte eID...
 retriesLeft=Tentatives de relance
+safariSandbox1=Il a \u00e9t\u00e9 d\u00e9tect\u00e9 que Safari ex\u00e9cut\u00e9 Java dans une sandbox.\n\nVous pouvez r\u00e9soudre ce probl\u00e8me comme suit:\nSafari -> Pr\u00e9f\u00e9rences -> S\u00e9curit\u00e9 -> Modules Internet: R\u00e9glages de site web\n-> Java -> 
+safariSandBox2= -> Autoriser -> Mode non s\u00e9curis\u00e9\nCes param\u00e8tres seront actifs la prochaine fois.
 securityError=Erreur de s\u00e9curit\u00e9.
 selectFiles=S\u00e9lectionner les fichiers...
 signatureAlgo=Algorithme de signature
