@@ -39,6 +39,8 @@ protocolSignature=De toepassing wenst een additionele authenticatie-handtekening
 readingIdentity=Identiteitsgegevens aan het uitlezen...
 removeCard=Gelieve uw eID kaart te verwijderen.
 retriesLeft=Aantal resterende pogingen
+safariSandbox1=Er werd gedetecteerd dat Safari Java in een sandbox uitvoert.\n\nJe kan dit als volgt corrigeren:\nSafari -> Voorkeuren -> Beveiliging -> Internetplugins: Website-instellingen\n-> Java -> 
+safariSandBox2= -> Sta toe -> Voer uit in onveilige modus\nDeze instellingen zullen pas de volgende keer actief zijn.
 securityError=Beveiligingsfout.
 selectFiles=Selecteer bestanden...
 signatureAlgo=Handtekenalgoritme
